Mailman - The GNU Mailing List Management System
Copyright (C) 1998-2008 by the Free Software Foundation, Inc.
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

Here is a history of user visible changes to Mailman.

2.1.13 (xx-xxx-xxxx)

  Bug Fixes and other patches

    - Updated contrib/mmdsr to report preserved messages.

2.1.12 (23-Feb-2009)

  Bug fixes and other patches

    - Fix compatibility with Python 2.6.

    - Fixed a bug in admin.py which would result in chunked pages of the
      membership list for members whose address begins with a non-alphanumeric
      character to not be visible or retrievable.

    - Changed ListAdmin.py to make rejected post messages From: the -owner
      address instead of the -bounces address.

    - With MTA = 'Postfix', if the STANZA END for a list being removed is
      missing or munged, the remainder of the aliases and/or virtual-mailman
      file is lost.  Fixed.

    - Since Mailman 2.1.1, 2.0.x outstanding subscription and held message
      requests have not been migrated properly.  This is fixed.
      Bug #266106 (sf998384).

    - Changed cron/gate_news to continue processing the remaining lists on
      certain errors that can be caused by configuration of a particular list.
      Bug #265941 (sf775100).

    - Fixed a bug in AvoidDuplicates.py that caused it to fail if the address
      in the To: or Cc: header differed in case from the case-preserved member
      address.  Bug #297795.

    - Fixed a problem in SecurityManager that caused it to not find the
      cookie when CheckCookie was not given a user and the user in the cookie
      had a %xx encoded character.  Bug # 299220.

    - Fixed a minor fromusenet reporting issue in the contributed mmdsr
      script.

    - Fixed a minor issue in cron/gate_news that could cause a list's
      watermark to not be completely updated.

    - Fixed an issue that prevented editing the options.html template from