@@ -1,4 +1,4 @@
-# Copyright (C) 1998-2006 by the Free Software Foundation, Inc.
+# Copyright (C) 1998-2009 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -53,6 +53,7 @@ BOUNCE_PIPELINE = [
     'SimpleWarning',
     'Yale',
     'LLNL',
+    'AOL',
     ]
 
 
