@@ -1,0 +1,36 @@
+X-MimeOLE: Produced By Microsoft Exchange V6.5
+Content-class: urn:content-classes:message
+MIME-Version: 1.0
+Content-Type: text/plain;
+	charset="iso-8859-1"
+Content-Transfer-Encoding: quoted-printable
+Subject: Returned mail - nameserver error report
+Date: Fri, 17 Jul 2009 16:05:22 -0700
+Message-ID: <200907172305.n6HN5Mn23080@mta1.service.uci.edu>
+X-MS-Has-Attach: 
+X-MS-TNEF-Correlator: 
+From: <MAILER-DAEMON@mta1.service.uci.edu>
+To: <xxx-bounces@lists.xxx.com>
+
+ --------Message not delivered to the following addresses:
+
+            user@uci.edu=20
+
+ --------Error Detail (phquery V3.0):
+
+---- user@uci.edu=20
+     Does not have a final email delivery point,
+     please contact this person by alternate means.
+=20
+       name: User Name
+       alias: USER
+
+Please contact Postmaster@uci.edu if you have any questions.
+
+ --------Unsent Message below:
+
+Received: from mx2.service.uci.edu (mx2.service.uci.edu =
+[128.200.59.180])
+	by mta1.service.uci.edu (8.11.4-20030923/8.11.2) with ESMTP id =
+n6HN5Mi23070;
+	Fri, 17 Jul 2009 16:05:22 -0700 (PDT)
