@@ -1,5 +1,5 @@
 Mailman - The GNU Mailing List Management System
-Copyright (C) 1998-2008 by the Free Software Foundation, Inc.
+Copyright (C) 1998-2009 by the Free Software Foundation, Inc.
 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
 
 Here is a history of user visible changes to Mailman.
@@ -7,6 +7,8 @@ Here is a history of user visible changes to Mailman.
 2.1.13 (xx-xxx-xxxx)
 
   Bug Fixes and other patches
+
+    - Added recognition for more bounces.
 
     - Updated contrib/mmdsr to report preserved messages.
 
